--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@tailwindcss/vite": "^4.1.17",
     "daisyui": "^5.4.7",
     "firebase": "^12.5.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
+    "react-simple-typewriter": "^5.0.1",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
